# patl

./: .env  Cargo.toml  helpfile.txt
db/: patl.db
migrations/2025-06-24-102728_create_users/: up.sql
src/: config.rs  main.rs  schema.rs  state.rs
src/models/: mod.rs  user.rs  user_dto.rs
src/routes/: health.rs  mod.rs  user.rs
src/services/: auth.rs
src/utils/: error.rs
